# plugins

plugins/k8smeta/: CMakeLists.txt
plugins/k8smeta/cmake/modules/: cares.cmake  grpc.cmake  openssl.cmake  protobuf.cmake  re2.cmake  zlib.cmake
plugins/krsi/: Cargo.toml  README.md
plugins/krsi/krsi/: Cargo.toml
plugins/krsi/krsi-common/: Cargo.toml
plugins/krsi/krsi-common/src/: lib.rs
plugins/krsi/krsi-ebpf/: Cargo.toml
plugins/krsi/krsi-ebpf/src/: auxmap.rs  main.rs
plugins/krsi/krsi-ebpf/src/operations/: bind.rs  connect.rs  linkat.rs  mkdirat.rs  open.rs  renameat.rs  socket.rs  symlinkat.rs  unlinkat.rs
plugins/krsi/krsi/src/: krsi_event.rs  lib.rs  main.rs
plugins/krsi/test/: test.c
